seaqt/QtCore/gen_qstringlist.h

class QRegExp;
class QRegularExpression;
class QStringList;
typedef struct QRegExp QRegExp;
typedef struct QRegularExpression QRegularExpression;
typedef struct QStringList QStringList;
QStringList* QStringList_new();
QStringList* QStringList_new2(struct seaqt_string i);
QStringList* QStringList_new3(struct seaqt_array /* of struct seaqt_string */  l);
QStringList* QStringList_new4(struct seaqt_array /* of struct seaqt_string */  param1);
void QStringList_operatorAssign(QStringList* self, struct seaqt_array /* of struct seaqt_string */  other);
bool QStringList_contains(const QStringList* self, struct seaqt_string str);
struct seaqt_array /* of struct seaqt_string */  QStringList_operatorPlus(const QStringList* self, struct seaqt_array /* of struct seaqt_string */  other);
struct seaqt_array /* of struct seaqt_string */  QStringList_operatorShiftLeft(QStringList* self, struct seaqt_string str);
struct seaqt_array /* of struct seaqt_string */  QStringList_operatorShiftLeftWithQStringList(QStringList* self, struct seaqt_array /* of struct seaqt_string */  l);
struct seaqt_array /* of struct seaqt_string */  QStringList_operatorShiftLeftWithQListLesserQStringGreater(QStringList* self, struct seaqt_array /* of struct seaqt_string */  l);
int QStringList_indexOfWithRx(const QStringList* self, QRegExp* rx);
int QStringList_lastIndexOfWithRx(const QStringList* self, QRegExp* rx);
int QStringList_indexOf2(const QStringList* self, QRegExp* rx);
int QStringList_lastIndexOf2(const QStringList* self, QRegExp* rx);
int QStringList_indexOfWithRe(const QStringList* self, QRegularExpression* re);
int QStringList_lastIndexOfWithRe(const QStringList* self, QRegularExpression* re);
void QStringList_operatorAssignWithQStringList(QStringList* self, struct seaqt_array /* of struct seaqt_string */  param1);
bool QStringList_contains3(const QStringList* self, struct seaqt_string str, int cs);
int QStringList_indexOf5(const QStringList* self, QRegExp* rx, int from);
int QStringList_lastIndexOf5(const QStringList* self, QRegExp* rx, int from);
int QStringList_indexOf6(const QStringList* self, QRegExp* rx, int from);
int QStringList_lastIndexOf6(const QStringList* self, QRegExp* rx, int from);
int QStringList_indexOf7(const QStringList* self, QRegularExpression* re, int from);
int QStringList_lastIndexOf7(const QStringList* self, QRegularExpression* re, int from);
void QStringList_delete(QStringList* self);